# instamd

./: .gitignore  LICENSE  README.md  pyproject.toml
instamd/: __main__.py  script.py  test.py
